2023-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/gte/960830-1.c: deleted, is only relevant for i386
	* support/regression/ports/mcs51-common/support.c: don't include mcs51reg.h,
	  define TI & SBUF directly instead, prevents name clash with B
	* support/regression/MakeList: enabled tcc_30_hanoi
	* support/regression/cases/Makefile.in: remove disabled warnings,
	  fixed warnings
	* support/regression/collate-results.py,
	* support/regression/compact-results.py: cosmetics
	* support/regression/gte/20001124-1.c,
	* support/regression/gte/20001229-1.c,
	* support/regression/gte/20010119-1.c,
	* support/regression/gte/20030216-1.c,
	* support/regression/gte/20091229-1.c,
	* support/regression/gte/900409-1.c,
	* support/regression/gte/930930-2.c,
	* support/regression/gte/950426-2.c,
	* support/regression/gte/951204-1.c,
	* support/regression/gte/960405-1.c,
	* support/regression/gte/970214-1.c,
	* support/regression/gte/970214-2.c,
	* support/regression/gte/990324-1.c,
	* support/regression/gte/991019-1.c,
	* support/regression/gte/alias-access-path-2.c,
	* support/regression/gte/pr17252.c,
	* support/regression/gte/pr22493-1.c,
	* support/regression/gte/pr23047.c,
	* support/regression/gte/pr38048-2.c,
	* support/regression/gte/pr40493.c,
	* support/regression/gte/pr49712.c: fixed warnings
	* support/regression/gte/20010329-1.c,
	* support/regression/gte/20030404-1.c,
	* support/regression/gte/20080222-1.c,
	* support/regression/gte/980526-2.c,
	* support/regression/gte/pr17133.c,
	* support/regression/gte/pr29798.c,
	* support/regression/gte/pr34099-2.c,
	* support/regression/gte/pr43629.c,
	* support/regression/gte/pr44942.c,
	* support/regression/gte/pr53465.c: suppressed valid warnings
	* support/regression/qct/0025-string.c,
	* support/regression/qct/0027-charval.c,
	* support/regression/qct/0032-indec.c,
	* support/regression/qct/0059-multistring.c,
	* support/regression/tcc/30_hanoi.c: cosmetics
